[gd_scene load_steps=77 format=2]

[ext_resource path="res://Battle Engine/Action Buttons/act_2.png" type="Texture" id=1]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Attack Bar Effect.png" type="Texture" id=2]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Slash/slash_1.png" type="Texture" id=3]
[ext_resource path="res://Battle Engine/Actions/HUD/KR.png" type="Texture" id=4]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Attack Bar2.png" type="Texture" id=5]
[ext_resource path="res://Battle Engine/Soul/Walking Soul_2.png" type="Texture" id=6]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Slash/slash_3.png" type="Texture" id=7]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Miss_1.png" type="Texture" id=8]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Attack Panel.png" type="Texture" id=9]
[ext_resource path="res://Battle Engine/Action Buttons/item_2.png" type="Texture" id=10]
[ext_resource path="res://Battle Engine/Action Buttons/mercy_2.png" type="Texture" id=11]
[ext_resource path="res://Battle Engine/Action Buttons/item_1.png" type="Texture" id=12]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Slash/slash_4.png" type="Texture" id=13]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Slash/slash_2.png" type="Texture" id=14]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Slash/slash_6.png" type="Texture" id=15]
[ext_resource path="res://Battle Engine/Action Buttons/fight_2.png" type="Texture" id=16]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Slash/slash_5.png" type="Texture" id=17]
[ext_resource path="res://Battle Engine/Action Buttons/mercy_1.png" type="Texture" id=18]
[ext_resource path="res://Battle Engine/Action Buttons/act_1.png" type="Texture" id=19]
[ext_resource path="res://Battle Engine/Text Bubbles/textbub1.png" type="Texture" id=20]
[ext_resource path="res://Battle Engine/Soul/Walking Soul_1.png" type="Texture" id=21]
[ext_resource path="res://Battle Engine/Text/Text.gd" type="Script" id=22]
[ext_resource path="res://Battles/December Ice/Thin Ice Fight.gd" type="Script" id=23]
[ext_resource path="res://Battle Engine/Text Bubbles/TextBubble.gd" type="Script" id=24]
[ext_resource path="res://Battle Engine/Zoom+Rotate.gd" type="Script" id=25]
[ext_resource path="res://Battle Engine/Boss HP Bar.gd" type="Script" id=26]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Miss.gd" type="Script" id=27]
[ext_resource path="res://Battle Engine/HUD.gd" type="Script" id=28]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Damage Counter/DamageCounter.gd" type="Script" id=29]
[ext_resource path="res://Chars/thinice/thinice.tscn" type="PackedScene" id=30]
[ext_resource path="res://Battle Engine/BattleBox/black.png" type="Texture" id=31]
[ext_resource path="res://Battle Engine/Actions/Fight Effects/Attack Bar1.png" type="Texture" id=32]
[ext_resource path="res://Battle Engine/Action Buttons/fight_1.png" type="Texture" id=33]
[ext_resource path="res://Battles/December Ice/DESTRUCTIVE GRIEF.wav" type="AudioStream" id=34]
[ext_resource path="res://Battle Engine/Actions/HUD/slash.png" type="Texture" id=35]
[ext_resource path="res://Battle Engine/Actions/HUD/HP.png" type="Texture" id=36]
[ext_resource path="res://Battle Engine/Actions.gd" type="Script" id=37]
[ext_resource path="res://Battle Engine/BattleBox/Attack Hiding.gd" type="Script" id=38]
[ext_resource path="res://Battle Engine/Soul/Soul.tscn" type="PackedScene" id=40]
[ext_resource path="res://Battle Engine/BattleBox/Battle Box.tscn" type="PackedScene" id=41]
[ext_resource path="res://Battle Engine/Actions/HUD/HP.tres" type="StyleBox" id=42]
[ext_resource path="res://Fonts/Mars_Needs_Cunnilingus.ttf" type="DynamicFontData" id=43]
[ext_resource path="res://Fonts/Comic Sans UT.ttf" type="DynamicFontData" id=44]
[ext_resource path="res://Fonts/determinationmonoweb-webfont.ttf" type="DynamicFontData" id=45]

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=20]
code = "shader_type canvas_item;

void fragment() {
    float alpha = texture(TEXTURE, UV).a;
    COLOR.a = step(0.5, alpha);
}"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 20 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 43 )

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;

void fragment() {
    float alpha = texture(TEXTURE, UV).a;
    COLOR.a = step(0.5, alpha);
}"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )

[sub_resource type="Shader" id=22]
code = "shader_type canvas_item;

void fragment() {
    float alpha = texture(TEXTURE, UV).a;
    COLOR.a = step(0.5, alpha);
}"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 22 )

[sub_resource type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 1, 1 )
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
anti_aliasing = false
anti_aliasing_size = 5.0

[sub_resource type="DynamicFont" id=8]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

void fragment() {
    float alpha = texture(TEXTURE, UV).a;
    COLOR.a = step(0.5, alpha);
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )

[sub_resource type="Shader" id=24]
code = "shader_type canvas_item;

void fragment() {
    float alpha = texture(TEXTURE, UV).a;
    COLOR.a = step(0.5, alpha);
}"

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 24 )

[sub_resource type="DynamicFont" id=10]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 45 )

[sub_resource type="DynamicFont" id=28]

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 5 ) ],
"loop": true,
"name": "Flashing",
"speed": 20.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "Idle",
"speed": 30.0
} ]

[sub_resource type="BitmapFont" id=16]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=36]
font_data = ExtResource( 44 )

[sub_resource type="DynamicFont" id=37]
font_data = ExtResource( 45 )

[node name="Battle" type="Node2D"]
script = ExtResource( 23 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
rotating = true
current = true
script = ExtResource( 25 )

[node name="Soul" type="Node" parent="."]

[node name="Soul" parent="Soul" instance=ExtResource( 40 )]
position = Vector2( 320, 433 )
z_index = 1

[node name="WalkingSoul" type="AnimatedSprite" parent="Soul/Soul"]
visible = false
frames = SubResource( 31 )
frame = 1
playing = true
offset = Vector2( 0, 4 )

[node name="HUD" type="Node" parent="."]
script = ExtResource( 28 )

[node name="Name" type="Label" parent="HUD"]
material = SubResource( 21 )
margin_left = 30.0
margin_top = 400.0
margin_right = 90.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 89.3496, 9.21985 )
custom_fonts/font = SubResource( 3 )
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LV" type="Label" parent="HUD"]
material = SubResource( 27 )
margin_left = 131.813
margin_top = 400.0
margin_right = 200.813
margin_bottom = 424.0
rect_pivot_offset = Vector2( 89.3496, 9.21985 )
custom_fonts/font = SubResource( 3 )
text = "LV"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LV Counter" type="Label" parent="HUD"]
material = SubResource( 23 )
margin_left = 170.647
margin_top = 400.0
margin_right = 200.647
margin_bottom = 424.0
rect_pivot_offset = Vector2( 89.3496, 9.21985 )
custom_fonts/font = SubResource( 3 )
text = "19"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Sprite" parent="HUD"]
position = Vector2( 235, 410 )
texture = ExtResource( 36 )

[node name="HP Barb" type="ProgressBar" parent="HUD"]
margin_left = 255.0
margin_top = 398.0
margin_right = 367.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 6 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0

[node name="HP Bar" type="ProgressBar" parent="HUD"]
margin_left = 255.0
margin_top = 398.0
margin_right = 367.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 8 )
custom_styles/fg = ExtResource( 42 )
custom_styles/bg = SubResource( 7 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP KR" type="AnimatedSprite" parent="HUD"]
position = Vector2( 386, 410 )
frames = SubResource( 9 )

[node name="HP Counter" type="Label" parent="HUD"]
material = SubResource( 19 )
margin_left = 416.0
margin_top = 400.0
margin_right = 446.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 14.259, 11.8306 )
custom_fonts/font = SubResource( 3 )
text = "92"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP Slash" type="Sprite" parent="HUD"]
position = Vector2( 460, 412 )
texture = ExtResource( 35 )

[node name="Max HP Counter" type="Label" parent="HUD"]
material = SubResource( 25 )
margin_left = 476.84
margin_top = 400.0
margin_right = 506.84
margin_bottom = 424.0
rect_pivot_offset = Vector2( 13.8381, 11.8306 )
custom_fonts/font = SubResource( 3 )
text = "92"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="Node" parent="."]

[node name="BattleBox" parent="Box" instance=ExtResource( 41 )]
position = Vector2( 320, 460 )

[node name="Attack Hiding" type="Light2D" parent="Box"]
position = Vector2( -1140, -791 )
z_index = 10
texture = ExtResource( 31 )
mode = 3
range_item_cull_mask = 1024
script = ExtResource( 38 )

[node name="Text" type="RichTextLabel" parent="Box"]
margin_left = 52.0
margin_top = 270.0
margin_right = 587.0
margin_bottom = 373.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "* test"
meta_underlined = false
text = "* test"
script = ExtResource( 22 )

[node name="Boss HP Bar" type="ProgressBar" parent="Box"]
visible = false
margin_left = 268.0
margin_top = 278.0
margin_right = 373.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 28 )
custom_styles/fg = SubResource( 29 )
custom_styles/bg = SubResource( 30 )
value = 75.0
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action Buttons" type="Node" parent="."]

[node name="Act_Fight" type="AnimatedSprite" parent="Action Buttons"]
position = Vector2( 87, 453 )
z_index = -1
frames = SubResource( 11 )

[node name="Act_Act" type="AnimatedSprite" parent="Action Buttons"]
position = Vector2( 240, 453 )
z_index = -1
frames = SubResource( 12 )

[node name="Act_Item" type="AnimatedSprite" parent="Action Buttons"]
position = Vector2( 400, 453 )
z_index = -1
frames = SubResource( 13 )

[node name="Act_Mercy" type="AnimatedSprite" parent="Action Buttons"]
position = Vector2( 555, 453 )
z_index = -1
frames = SubResource( 14 )

[node name="SoundChannels" type="Node" parent="."]

[node name="SFXTalkChannel1" type="AudioStreamPlayer" parent="SoundChannels"]

[node name="SFXChannel1" type="AudioStreamPlayer" parent="SoundChannels"]

[node name="SFXChannel2" type="AudioStreamPlayer" parent="SoundChannels"]

[node name="SFXGBChannel1" type="AudioStreamPlayer" parent="SoundChannels"]

[node name="SFXGBChannel2" type="AudioStreamPlayer" parent="SoundChannels"]

[node name="SFXSoulChannel1" type="AudioStreamPlayer" parent="SoundChannels"]

[node name="Actions" type="Node" parent="."]
script = ExtResource( 37 )

[node name="Fight" type="Node" parent="Actions"]

[node name="Fight Panel" type="Sprite" parent="Actions/Fight"]
visible = false
position = Vector2( 320, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Attack Bar Background" type="Sprite" parent="Actions/Fight"]
visible = false
position = Vector2( 320, 320 )
texture = ExtResource( 2 )

[node name="Attack Bar" type="AnimatedSprite" parent="Actions/Fight"]
visible = false
position = Vector2( 320, 320 )
frames = SubResource( 15 )
animation = "Idle"

[node name="Damage Counter" type="RichTextLabel" parent="Actions/Fight"]
visible = false
margin_left = 77.0
margin_top = 68.0
margin_right = 567.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 245, 18 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[center][img]res://Battle Engine/Actions/Fight Effects/Damage Counter/damage_9.png[img]res://Battle Engine/Actions/Fight Effects/Damage Counter/damage_9.png[img]res://Battle Engine/Actions/Fight Effects/Damage Counter/damage_9.png"
scroll_active = false
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack Slash" type="AnimatedSprite" parent="Actions/Fight"]
visible = false
position = Vector2( 320, 176 )
scale = Vector2( 2, 2 )
z_index = 23
frames = SubResource( 17 )

[node name="Miss" type="Sprite" parent="Actions/Fight"]
visible = false
position = Vector2( 320, 140 )
texture = ExtResource( 8 )
script = ExtResource( 27 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )

[node name="TextBubble" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 349, 76 )
frames = SubResource( 32 )
centered = false
script = ExtResource( 24 )

[node name="Text" type="RichTextLabel" parent="TextBubble"]
margin_left = 43.0
margin_top = 12.0
margin_right = 219.0
margin_bottom = 114.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 36 )
text = "Test1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Label" parent="."]
visible = false
margin_left = 14.0
margin_top = 15.0
margin_right = 197.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 37 )
text = "Debug Text"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -11

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0.00784314, 0, 0.12549, 1 )

[node name="Dec New" parent="." instance=ExtResource( 30 )]
position = Vector2( 320, 252 )

[connection signal="animation_finished" from="Actions/Fight/Attack Slash" to="Actions" method="_on_Attack_Slash_animation_finished"]
